<resources>
    <string name="app_name">Hometown</string>
    <string name="nickname">nickname</string>
    <string name="password">password</string>
    <string name="country">country</string>
    <string name="state">state</string>
    <string name="city">city</string>
    <string name="year">year</string>
    <string name="latitude">latlng</string>
    <string name="longitude">longitude</string>
    <string name="btn_select">select</string>
    <string name="btn_done">done</string>
    <string name="btn_cancel">cancel</string>
    <string name="btn_map">map</string>
    <string name="btn_signup">sign up</string>
    <string name="btn_signin">sign in</string>
    <string name="email">email</string>

    <string name="saved_country">saved_country</string>
    <string name="saved_state">saved_state</string>
    <string name="saved_lat">saved_lat</string>
    <string name="saved_lng">saved_lng</string>
</resources>
