<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/activity_signin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">
    <TextView
        android:id="@+id/signin_label_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname"/>

    <EditText
        android:id="@+id/signin_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="abcdefghijklmnopqrstuvwxyz0123456789"/>

    <TextView
        android:id="@+id/signin_label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/signin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:password="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_signin"
        android:onClick="signin"/>

</LinearLayout>